--- a/requirements.txt
+++ b/requirements.txt
@@ -1,19 +1,20 @@
-Django==1.4.10
-Markdown==2.3.1
-PyYAML==3.10
-Pygments==1.6
-South==0.8.4
-dj-database-url==0.2.2
-django-extensions==1.2.5
-django-sslify==0.2.2
+dj-database-url==0.3.0
+-e git+https://github.com/django/django.git@449d1effb81152e54f482784cf7febe965007096#egg=Django-dev
+django-extensions==1.5.1
+django-sslify==0.2.5
 django-storages==1.1.8
-djangorestframework==2.3.12
-factory-boy==2.2.1
-gunicorn==18.0
-psycopg2==2.5.1
-pytz==2013.8
-requests==2.1.0
-six==1.4.1
-unittest2==0.5.1
-wsgiref==0.1.2
+djangorestframework==3.1.0
+factory-boy==2.4.1
+gunicorn==19.3.0
+linecache2==1.0.0
+Markdown==2.6.1
+psycopg2==2.6
+Pygments==2.0.2
+pytz==2014.10
+PyYAML==3.11
+requests==2.6.0
+six==1.9.0
+South==1.0.2
+traceback2==1.4.0
+unittest2==1.0.1
 yolk==0.4.3
